--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Bao committed this by running "git add ." to add all files to the staging area
+# and it prompted an error message when S pulled the commit
+.DS_Store
