--- a/Bao/BlazorSolution/BlazorProject.csproj
+++ b/Bao/BlazorSolution/BlazorProject.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="QuestPDF" Version="2025.5.0" />
+    </ItemGroup>
+
 </Project>
