--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,118 @@ dist
 # Bao committed this by running "git add ." to add all files to the staging area
 # and it prompted an error message when S pulled the commit
 .DS_Store
+# .NET Build artifacts
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Ww][Ii][Nn]32/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+
+# .NET Core
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+# Compiled assemblies
+*.dll
+*.exe
+*.pdb
+*.cache
+*.ilk
+*.meta
+*.obj
+*.iobj
+*.pch
+*.ipdb
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.tmp_proj
+*_wpftmp.csproj
+*.log
+*.tlog
+*.vspscc
+*.vssscc
+.builds
+*.pidb
+*.svclog
+*.scc
+
+# JetBrains Rider
+.idea/
+*.sln.iml
+
+# User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Blazor specific
+wwwroot/css/app.css
+wwwroot/css/bootstrap/
+Blazor.BootstrapCSS.Server/
+**/wwwroot/css/open-iconic/
+**/wwwroot/_content/
+
+# ASP.NET Scaffolding
+ScaffoldingReadMe.txt
+
+# Azure Static Web Apps
+.azure/
+swa-cli.config.json
+
+# Development certificates
+*.pfx
+*.p12
+
+# Local History for Rider
+.localhistory/
+
+# Temporary ASP.NET files
+Temporary ASP.NET Files/
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+.BIN/
+
+# Mac
+.DS_Store
+
+# Node.js (if using npm/webpack)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Hot reload
+**/*.Hot.dll
+**/*.Hot.pdb
