--- a/Bao/BlazorSolution/BlazorProject.csproj
+++ b/Bao/BlazorSolution/BlazorProject.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="QuestPDF" Version="2025.5.0" />
+      <PackageReference Include="QuestPDF.Barcodes" Version="2024.10.3" />
+      <PackageReference Include="ZXing.Net" Version="0.16.10" />
     </ItemGroup>
 
 </Project>
