Add build endpoint ("/"), pet record, & pet endpoints

--- a/Bao/WebAPI/WebAPI/appsettings.json
+++ b/Bao/WebAPI/WebAPI/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Database": {
+    "Name": "pets-dev",
+    "Url": "mongodb://localhost:27017"
+  },
+  
+  "Build" : {
+    "Title": "Asp.NET Core Minimal APIs with CQRSXXX",
+    "Version": "1.0.0"
+  }
 }
