--- a/Bao/WebAPI/WebAPI/WebAPI.csproj
+++ b/Bao/WebAPI/WebAPI/WebAPI.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8"/>
+        <PackageReference Include="MediatR" Version="13.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
+        <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
     </ItemGroup>
 
 </Project>
