Connect to the db and configure get, getById, post, put, and delete endpoints.

--- a/Bao/WebAPI/WebAPI/appsettings.json
+++ b/Bao/WebAPI/WebAPI/appsettings.json
@@ -13,7 +13,7 @@
   },
   
   "Build" : {
-    "Title": "Asp.NET Core Minimal APIs with CQRSXXX",
-    "Version": "1.0.0"
+    "Title": "Asp.NET Core Minimal API with MongoDB",
+    "Version": "0.0.1"
   }
 }
