--- a/Bao/BlazorSolution/BlazorProject.csproj
+++ b/Bao/BlazorSolution/BlazorProject.csproj
@@ -4,9 +4,13 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="8.2.4" />
+      <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+      <PackageReference Include="MudBlazor" Version="8.12.0" />
       <PackageReference Include="QuestPDF" Version="2025.5.0" />
       <PackageReference Include="QuestPDF.Barcodes" Version="2024.10.3" />
       <PackageReference Include="ZXing.Net" Version="0.16.10" />
