--- a/Bao/BlazorDometrainCourse/BlazorDometrainCourse/Properties/launchSettings.json
+++ b/Bao/BlazorDometrainCourse/BlazorDometrainCourse/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-        "applicationUrl": "http://localhost:5108",
+        "applicationUrl": "https://localhost:5108",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
