--- a/Bao/BlazorSolution/BlazorProject.csproj
+++ b/Bao/BlazorSolution/BlazorProject.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="BlazorSortable" Version="5.1.2" />
       <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="8.2.4" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.10" />
       <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
       <PackageReference Include="MudBlazor" Version="8.12.0" />
     </ItemGroup>
